--- a/config/samples/webapp_v1_guestbook.yaml
+++ b/config/samples/webapp_v1_guestbook.yaml
@@ -3,5 +3,10 @@ kind: GuestBook
 metadata:
   name: guestbook-sample
 spec:
-  # Add fields here
-  foo: bar
+  redisName: redis-sample
+  frontend:
+    resources:
+      requests:
+        cpu: 80m
+    servingPort: 8080
+    replicas: 1
